--- a/bacs200/project/final.css
+++ b/bacs200/project/final.css
@@ -9,20 +9,30 @@ h2 {
 
 ul{
     text-align: center;
-    color: gainsboro;
-    border-color: dimgrey;
-    
-    
 }
 
 li {
     display: inline-block;
+    font-weight: bolder;
+
 }
 
 nav {
+    background-color: lightgrey;
+   border: 5px solid darkgrey;
+    padding-top: 15px;
+    margin-left: 40%;
+    margin-right: 40%;
+    padding-right: 35px;
+    margin-bottom: 20px;
 }
 
-div {
+#carousel1 {
     width: 700px;
     height: inherit;
+}
+
+p {
+    border: 5px solid darkgrey;
+    padding:5px;
 }
