--- a/bacs200/project/final.css
+++ b/bacs200/project/final.css
@@ -35,4 +35,11 @@ nav {
 p {
     border: 5px solid darkgrey;
     padding:5px;
+    text-align: center;
+}
+body {
+    text-align: center;
+}
+iframe {
+    padding-left: 40%;
 }
