--- a/bacs200/project/final.css
+++ b/bacs200/project/final.css
@@ -28,17 +28,23 @@ nav {
 }
 
 #carousel1 {
-    width: 700px;
+    width: 400px;
     height: inherit;
+    display:block;
 }
-
 p {
     border: 5px solid darkgrey;
     padding:5px;
     text-align: center;
+    margin: 20px;
 }
 body {
     text-align: center;
+}
+iframe{
+    display: block;
+    margin-left: 30%;
+    margin-bottom: 20px;
 }
 .modal {
   display: none; /* Hidden by default */
